style/index.css
:root {
    font-family: Calibri, 'Trebuchet MS', sans-serif;
    --anchor-font-size-link: 1.2rem;
    --font-size: 1.1rem;
}

a {
    color: rgba(0, 0, 0, 0.83);
    font-size: var(--font-size);
    text-decoration: none;
    display: inline-block;
    width: 100%;
    height: 100%;
}

/* Reset Basic Styling P tag*/
p {
    margin: 0;
    padding: 0;
}

/* Parent Container Styling Starts */
body {
    margin: 0;
    padding: 0;
    background-color: rgba(0, 0, 0, 0.70);
    color: rgba(0, 0, 0, 0.83);
    width: 100%;
    min-height: 75%;
    max-height: 95%;
    display: flex;
    justify-content: center;
}

body .wrapper {
    margin: 0.5rem 0.5rem;
    padding: 30px 10% 30px 10%;
    width: 80%;
    height: 95%;
    display: flex;
    flex-direction: column;
    background-color: rgba(233, 233, 233, 1);
    overflow: scroll;
}
/* Parent Container Styling Ends */

/* Header Styling Starts */
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

header .logo {
    display: flex;
    flex-direction: column;
    width: 400px;
    font-size: 28px;
    padding: 0 40px 20px 0;
}

/* Logo Container Animation Starts */
header .logo .heading-first-name {
    margin: 0;
    transition: padding 0.8s;
}

header .logo .heading-last-name {
    margin: 0;
    padding: 0 0 0 100px;
    transition: padding 0.8s;
}

header .logo .heading-first-name:hover {
    padding: 0 0 0 260px;
}

header .logo .heading-last-name:hover {
    padding: 0 150px 0 0;
}
/* Logo Container Animation Ends */

header .heading-nav {
    position: relative;
    display: flex;
    align-items: center;
    height: 100%;
    min-width: 50px;
    font-size: var(--anchor-font-size-link);
    gap: 30px;
    top: 20px;
    flex-wrap: wrap;
    color: rgba(0, 0, 0, 0.8);
}

header .heading-nav .nav-wrapper {
    position: relative;
    height: 30px;
    top: 10px;
}

header .heading-nav .nav-wrapper .navigation {
    position: relative;
    bottom: 0;
    transition: bottom 0.2s ease;
}

header .heading-nav .nav-wrapper:hover .navigation {
    position: relative;
    bottom: 7px;
    box-shadow: 0 1.4px rgba(0, 0, 0, 0.83);
}

header .heading-nav .nav-wrapper.home .navigation{
    box-shadow: 0 1.4px rgba(0, 0, 0, 0.83);
}
/* Header Container Styling Ends */

/* Main Container Styling Starts */
main {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    margin-bottom: 0px;
}

main .container-profile {
    display: flex;
    flex-direction: column;
}

main .container-profile img {
    position: relative;
    bottom: 0;
    width: 327px;
    padding-left: 40px;
    transition: bottom 0.4s;
}

main .container-profile img:hover {
    position: relative;
    bottom: 10px;
}

main .container-introduction {
    display: flex;
    width: 80%;
    text-align: start;
}

main .container-introduction .container-paragraph {
    padding: 20px;
    width: 100%;
    font-size: var(--font-size);
}

main .container-introduction .container-paragraph .paragraph.main {
    margin-bottom: 0;
    text-align: justify;
}

main .container-introduction .container-paragraph .paragraph.anchor {
    margin-top: 9px;
    text-align: justify;
}

main .container-introduction .container-paragraph a {
    font-weight: 900;
    font-size: var(--anchor-font-size-link);
}

main .container-progress-bar {
    font-size: 1.1rem;
    margin-top: 20px;
    border-top: solid 1.2px;
    border-bottom: solid 1.2px;
    padding: 40px 40px 40px 40px;
    width: 70%;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 20px;
}

main section:hover {
    background-color: rgba(244, 244, 244, 1);
}

progress[value] {
    /* Reset The Default Appearance for Progress Tag */
    -webkit-appearance: none;
    appearance: none;
    width: 170px;
    height: 14px;
}

progress[value]::-webkit-progress-bar {
    background-image: black;
    background-color: #eee;
    border-radius: 2px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
}
/* Main Container Styling Ends */

/* Footer Container Styling Starts */
footer {
    align-self: center;
    margin-top: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 20px;
    width: 70%;
}

footer h2 {
    margin-bottom: 40px;
}

footer .personal-info {
    display: grid;
    grid-template-columns: 60px 10px 230px;
    grid-template-rows: repeat(3, 30px);
    gap: 2px;
    margin-bottom: 30px;
    margin-left: 70px;
    justify-items: start;
}

footer .personal-info .span-info {
    grid-column: 1;
    justify-self: center;
}

footer .personal-info .span-semicolon {
    grid-column: 2;

}

footer .personal-info a {
    font-weight: 800;
}

/* Footer Container Styling Ends */

